better image quality on mobile small css fixes

--- a/css/layout.css
+++ b/css/layout.css
@@ -1,9 +1,9 @@
 
 
 @media only screen and (min--moz-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (-o-min-device-pixel-ratio: 2/1), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
-    .dragimg img {
-        /*width:50%;*/
-        /*height:50%;*/
+
+    .dragimg {
+
 
         -webkit-transform: scale(0.5);
         -moz-transform: scale(0.5);
@@ -12,17 +12,39 @@
         transform: scale(0.5);
         filter: progid:DXImageTransform.Microsoft.Matrix(M11=0.9999619230641713, M12=-0.008726535498373935, M21=0.008726535498373935, M22=0.9999619230641713,SizingMethod='auto expand');
 
-        -ms-transform-origin: 0% 0%;
-        -webkit-transform-origin: 0% 0%;
-        transform-origin: 0% 0%;
+        -ms-transform-origin: 0% -50px;
+        -webkit-transform-origin: 0% -50px;
+        transform-origin: 0% -50px;
 
     }
-    /*.dragimg.mapobject img {*/
-        /*width:100%;*/
-        /*height:100%;*/
-    /*}*/
-}
 
+    .dragimg.mapobject {
+
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+        transform: scale(1);
+
+        -ms-transform-origin: 0% -50px;
+        -webkit-transform-origin: 0% -50px;
+        transform-origin: 0% -50px;
+    }
+
+
+    .dragimg.mapobject.presskit {
+        -webkit-transform: scale(0.5);
+        -moz-transform: scale(0.5);
+        -ms-transform: scale(0.5);
+        -o-transform: scale(0.5);
+        transform: scale(0.5);
+
+        -ms-transform-origin: 0% -50px;
+        -webkit-transform-origin: 0% -50px;
+        transform-origin: 0% -50px;
+    }
+
+}
 #overlay{
 
     width: 100%;
@@ -107,10 +129,10 @@ margin-left: -145px;left: 50%;position: relative;top: -20px;font-size: 19px;}
    -webkit-backface-visibility: hidden;
    -webkit-perspective: 1000;
 
-   -webkit-transform: translate3d(0, 0, 0);
-   -moz-transform: translate3d(0, 0, 0);
-   -ms-transform: translate3d(0, 0, 0);
-   transform: translate3d(0, 0, 0);
+   /*-webkit-transform: translate3d(0, 0, 0);*/
+   /*-moz-transform: translate3d(0, 0, 0);*/
+   /*-ms-transform: translate3d(0, 0, 0);*/
+   /*transform: translate3d(0, 0, 0);*/
   /* Other transform properties here */
 }
 
@@ -137,7 +159,6 @@ margin-left: -145px;left: 50%;position: relative;top: -20px;font-size: 19px;}
     width:50px;
     height: 50px;
     position:absolute;
-    background-color: red;
     right: 0px;
 }
 #plaatjes1 .dragimg img{ margin-top:-20px;}
